# genops-spec

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CODEQL_CONFIGURATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  Makefile  README.md  SECURITY.md  TEST_SUITE_SUMMARY.md  bandit-report.json  compliance_audit_report_20251027_192836.json  docker-compose.grafana-minimal.yml  git_helper.py  pyproject.toml  run_tests.py  test_attribution.py  test_enhanced_errors.py  test_quick.py  test_validation.py
.github/: labeler.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  contributors.yml  dco.yml  docs.yml  good-first-issues.yml  openrouter-ci.yml  release.yml  validate-readme-format.yml
benchmarks/: performance_benchmarks.py  raindrop_performance_benchmarks.py  test_benchmarks.py
charts/genops-ai/: Chart.yaml  README.md  values.yaml
docs/: README.md  anthropic-quickstart.md  anyscale-performance-benchmarks.md  anyscale-quickstart.md  arize-quickstart.md  bedrock-quickstart.md  cohere-quickstart.md  cost-intelligence-guide.md  cribl-quickstart.md  databricks-unity-catalog-quickstart.md  datadog-quickstart.md  enterprise-governance-templates.md  grafana-query-examples.md  grafana-quickstart.md  griptape-quickstart.md  haystack-quickstart.md  honeycomb-quickstart.md  huggingface-quickstart.md  kubernetes-api-gateway.md  kubernetes-aws-deployment.md  kubernetes-azure-deployment.md  kubernetes-best-practices.md  kubernetes-cicd.md  kubernetes-cost-optimization.md  kubernetes-dr.md  kubernetes-gcp-deployment.md  kubernetes-getting-started.md  kubernetes-local-development.md  kubernetes-migration-guide.md  kubernetes-multi-cloud.md  kubernetes-multi-tenant.md  kubernetes-observability.md  kubernetes-quickstart.md  kubernetes-security.md  kubernetes-service-mesh.md  kubernetes-troubleshooting.md  kubetorch-quickstart.md  langchain-quickstart.md  loki-quickstart.md  mlflow-quickstart.md  (+14 more)
docs/ci-cd/: openrouter-integration.md
docs/guides/: multi-provider-cost-tracking.md
docs/integrations/: anyscale.md  arize.md  autogen.md  bedrock.md  cohere.md  collibra.md  cribl.md  databricks-unity-catalog.md  datadog.md  elastic.md  grafana.md  griptape.md  honeycomb.md  huggingface.md  kubetorch.md  mlflow.md  ollama.md  openrouter.md  opentelemetry.md  otel-collector.md  prometheus.md  skyrouter.md  splunk.md  tempo.md  together.md
docs/monitoring/: openrouter-production-monitoring.md
docs/policies/: collibra-policy-mapping.md
docs/production/: databricks-unity-catalog-deployment.md
docs/quickstart/: autogen-quickstart.md
docs/quickstarts/: collibra-quickstart.md  elastic-quickstart.md
docs/testing/: developer-experience-validation.md
examples/: README.md  attribution_guide.py  auto_instrumentation.py  basic_usage.py  otel_setup.py  tag_validation_guide.py
examples/anthropic/: advanced_features.py  auto_instrumentation.py  basic_tracking.py  cost_optimization.py  multi_provider_costs.py  production_patterns.py  setup_validation.py
examples/anyscale/: basic_completion.py  context_manager_patterns.py  embeddings_workflow.py  hello_anyscale_minimal.py  multi_customer_attribution.py  multi_model_comparison.py  production_deployment.py
examples/arize/: README.md  advanced_features.py  auto_instrumentation.py  basic_tracking.py  cost_optimization.py  production_patterns.py  run_all_examples.sh  setup_validation.py
observability/: README.md  demo-app.py  otel-collector-minimal-config.yaml
scripts/: developer_experience_validator.py  git_helper.py  run_tests.py  validate-readme-format.py  validate_setup.py
spec/: genops-spec-v0.1.md
tests/: __init__.py  conftest.py  test_attribution.py  test_auto_init.py  test_auto_instrumentation.py  test_crewai_adapter.py  test_crewai_agent_monitor.py  test_crewai_conftest.py  test_crewai_cost_aggregator.py  test_crewai_integration.py  test_crewai_registration.py  test_crewai_validation.py  test_haystack_adapter.py  test_haystack_cost_aggregator.py  test_haystack_integration.py  test_haystack_monitor.py  test_haystack_registration.py  test_haystack_validation.py  test_otel_collector_validation.py  test_quick.py  test_simple.py  test_validation.py
(+708 files in other folders)
